add calculate fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">Nutritions App</string>
+    <string name="calorie_calculator_title">Calculate Daily Calories</string>
+    <string name="age_label">Age</string>
+    <string name="height_label">Height</string>
+    <string name="weight_label">Weight</string>
+    <string name="activity_label">Activity</string>
+    <string name="gender_label">Gender</string>
+    <string name="calculator_body">For accurate calculation, we need some basic info about you.</string>
+
+    <string-array name="planets_array">
+        <item>Sedentary(no exercise, desk job)</item>
+        <item>Moderate exercise(3–5 days per week)</item>
+        <item>Hard exercise(6–7 days per week)</item>
+    </string-array>
+
 </resources>
