--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Nutritions App</string>
+    <string name="calculated_items_Screen_Title">Calculated Items</string>
+    <string name="card_status_description">Items Crosses your body optimal calories</string>
+    <string name="card_status_face">:(</string>
 </resources>
