--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
     <string name="weight">75</string>
     <string name="height">170</string>
     <string name="age">25</string>
+    <string name="cardName">item name</string>
+    <string name="cardCalories">card calories</string>
+    <string name="cal">Cal</string>
 </resources>
