--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="activity_label">Activity</string>
     <string name="gender_label">Gender</string>
     <string name="calculator_body">For accurate calculation, we need some basic info about you.</string>
-    <string name="calculated_items_Screen_Title">Calculated Items</string>
+    <string name="title_text">track your daliy calories</string>
     <string name="card_status_description">Items crosses your body optimal calories</string>
     <string name="card_status_face">:(</string>
     <string name="items_selected">selected items</string>
@@ -22,12 +22,12 @@
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="calories">2500</string>
+
 
     <string name="find_track_and_eat_healthy_food">Find, track and eat healthy food.</string>
     <string name="collections_for_you">Collections for you</string>
     <string name="high_protein_meals">High protein meals</string>
-    <string name="top_10_recipes_n_contains_vitamin_d3">Top 10 recipes\n contains vitamin D3</string>
+    <string name="top_10_recipes_n_contains_vitamin_d3">Top 10 recipes contains vitamin D3</string>
     <string name="fibers">Fibers</string>
     <string name="high_carb_meals">High carb meals</string>
     <string name="protein">Protein</string>
@@ -53,5 +53,6 @@
     <string name="enter_btn">Enter</string>
     <string name="cardName">item name</string>
     <string name="cardCalories">card calories</string>
-    <string name="cal">Cal</string>
+    <string name="_214_g">214 g</string>
+    <string name="_216_g">216 g</string>
 </resources>
